--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ Description"></textarea>
                 <option value="high">High Priority</option>
             </select>
             <button type="submit" id="addTask">Add Task</button>
+            <!-- <button type="delete" id="dltTask">Delete Task</button> -->
         </form>
         <!-- Task List Container -->
         <div id="taskList"></div>
