--- a/index.html
+++ b/index.html
@@ -9,25 +9,23 @@
 
 <body>
     <div class="container">
-        <h1>Task Manager</h1>
-        <!-- Task Input Form -->
-        <form id="taskForm">
-            <input type="text" id="taskTitle" placeholder="Task
-Title" required>
-            <textarea id="taskDescription" placeholder="Task
-Description"></textarea>
-            <select id="taskPriority">
-                <option value="low">Low Priority</option>
-                <option value="medium">Medium Priority</option>
-                <option value="high">High Priority</option>
-            </select>
-            <button type="submit" id="addTask">Add Task</button>
-            <!-- <button type="delete" id="dltTask">Delete Task</button> -->
-        </form>
-        <!-- Task List Container -->
-        <div id="taskList"></div>
-    </div>
-    <script src="taskManager.js"></script>
+        <div class="container">
+            <h1>Task Manager</h1>
+            <!-- Task Input Form -->
+            <form id="taskForm">
+                <input type="text" id="taskTitle" placeholder="Task Title" required>
+                <textarea id="taskDescription" placeholder="Task Description"></textarea>
+                <select id="taskPriority">
+                    <option value="low">Low Priority</option>
+                    <option value="medium">Medium Priority</option>
+                    <option value="high">High Priority</option>
+                </select>
+                <button type="submit" id="addTask">Add Task</button>
+            </form>
+            <!-- Task List Container -->
+            <div id="allTaskList"></div>
+        </div>
+        <script src="taskManager.js"></script>
 </body>
 
 </html>
